# deployer

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
src/deployer/application/deployers/: base.py  docker.py  execute.py  git.py  shell.py
src/deployer/application/interactors/deployment/: deploy_project.py  get_deploy_history.py  get_deployment.py
src/deployer/application/interactors/projects/: create_project.py  create_server.py  delete_project.py  delete_server.py  get_project_info.py  get_project_list.py  rollback_project_config.py  show_project_config.py  update_project_config.py  update_project_strategy.py
src/deployer/application/interactors/user/: create_user.py
src/deployer/database/: events.py  identity_provider.py  mapper.py  transaction.py
src/deployer/database/migrations/: env.py
src/deployer/database/migrations/versions/: 2026_02_06_2058-a7343c918423_init.py  2026_02_07_1800-3a251ea3a411_add_auto_created_at_to_deployment.py  2026_02_08_2343-12fb5dc3600e_add_strategy_to_config.py
src/deployer/database/models/: __init__.py  deployment.py  project.py  user.py
src/deployer/database/repositories/: deployment.py  project.py  user.py
src/deployer/database/types/: encrypted_string.py
src/deployer/domain/entities/: deployment.py  project.py  project_configs.py  user.py
src/deployer/domain/exceptions/: deployment.py  project.py  user.py
src/deployer/domain/validators/: annotation.py
src/deployer/main/: main.py
src/deployer/main/providers/: build.py  db.py  identity.py  interactor.py
src/deployer/presentators/tg/: __init__.py  error.py
src/deployer/presentators/tg/dialogs/: deployment.py  entry.py  project.py  user.py
src/deployer/presentators/tg/handlers/: deployment.py  project.py  user.py
src/deployer/presentators/tg/states/: deployment.py  entry.py  project.py  user.py
