[tool.poetry]
name = "deployer"
version = "0.1.0"
description = ""
authors = []

[tool.black]
line-length = 85
skip-string-normalization = true

[tool.ruff]
line-length = 85
src = ["src"]
indent-width = 4
target-version = "py313"
fix = true
exclude = [
    ".git",
    "migrations",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    "__pychache__",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".venv"
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ARG002",
    "ANN",
    "D",
    "EM102",
    "TRY003",
    "PLR0913",
    "RUF001",
    "G004",
    "SIM112",
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
line-ending = "lf"
quote-style = "single"
docstring-code-format = true
skip-magic-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**.py" = ["S101", "PLR2004"]

[tool.ruff.lint.isort]
case-sensitive = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.mypy]
files = ["src"]
strict = true
python_version = "3.13"
ignore_missing_imports = true
install_types = true
non_interactive = true

disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = false

disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_unimported = false

[tool.pytest.ini_options]
pythonpath = ". src"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.poetry.dependencies]
python=">=3.13,<3.15"
pre-commit = "3.8.0"
alembic = "1.18.1"
sqlalchemy = "2.0.46"
pydantic = "2.12.5"
paramiko = "4.0.0"
dishka = "1.7.2"
aiogram = "3.24.0"
aiogram_dialog = "2.4.0"
psycopg = "3.3.2"
aiofiles = "25.1.0"
aiohappyeyeballs = "2.6.1"
aiohttp = "3.13.3"
aiosignal = "1.4.0"
annotated-types = "0.7.0"
attrs = "25.4.0"
bcrypt = "5.0.0"
cachetools = "5.5.2"
certifi = "2026.1.4"
cffi = "2.0.0"
cfgv = "3.5.0"
cryptography = "46.0.3"
distlib = "0.4.0"
filelock = "3.20.3"
frozenlist = "1.8.0"
greenlet = "3.3.1"
identify = "2.6.16"
idna = "3.11"
iniconfig = "2.3.0"
invoke = "2.2.1"
jinja2 = "3.1.6"
librt = "0.7.8"
magic-filter = "1.0.12"
mako = "1.3.10"
markupsafe = "3.0.3"
multidict = "6.7.1"
mypy = "1.19.1"
mypy-extensions = "1.1.0"
nodeenv = "1.10.0"
packaging = "26.0"
pathspec = "1.0.3"
platformdirs = "4.5.1"
pluggy = "1.6.0"
propcache = "0.4.1"
psycopg-binary = "3.3.2"
pycparser = "3.0"
pydantic-core = "2.41.5"
pynacl = "1.6.2"
pytest = "7.4.4"
pytest-asyncio = "0.21.2"
pyyaml = "6.0.3"
ruff = "0.4.10"
typing-inspection = "0.4.2"
typing-extensions = "4.15.0"
virtualenv = "20.36.1"
yarl = "1.22.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.1"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
mypy = "^1.9.0"
